# RoboClaw

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  FEATURES_IMPLEMENTED.md  LICENSE  README.md  README.md.bak  install  install.ps1  修改.md  文档.md
.github/ISSUE_TEMPLATE/: 00_welcome.md
.robopartner/conversations/node_642914ea60805a99/: metadata.json  tree.json
configs/: hardware.json.example
docs/: embedded-quickstart.md  social-link-guide.md
docs/plans/: 2025-02-20-roboclaw-design.md  2025-02-20-roboclaw-extensions-design.md  2025-02-21-terminal-ui-improvement.md  2025-02-22-embedded-robotics-design.md  2025-02-22-social-link-agent-bridge-design.md  2025-02-23-rename-to-roboclaw.md  2025-02-23-robotics-platform-extension-design.md  2025-02-23-robotics-platform-extension-implementation.md
docs/releases/: RELEASE_NOTES.md
plugins/vision/realsense2/: realsense2_plugin.cpp  realsense2_plugin.h
plugins/vision/rplidar/: rplidar_plugin.cpp  rplidar_plugin.h
scripts/: install  install.ps1  install.sh
skills/builtin/: code-review.skill  fix-bug.skill  generate-tests.skill  project-scaffold.skill
src/: main.cpp
src/agent/: agent.cpp  agent.h  agent_bridge.h  claude_code_bridge.cpp  claude_code_bridge.h  prompt_builder.cpp  prompt_builder.h  task_coordinator.cpp  task_coordinator.h  tool_executor.cpp  tool_executor.h
src/cli/: config_wizard.cpp  config_wizard.h  interactive_mode.cpp  interactive_mode.h  link_command.cpp  link_command.h  skill_commands.cpp  skill_commands.h
src/embedded/: programmer_detector.cpp  programmer_detector.h  workflow_controller.cpp  workflow_controller.h
src/embedded/optimizers/: i_parameter_optimizer.h  parameter_optimizer.cpp
src/hal/: comm.h  hal_exception.h  hardware_config.cpp  hardware_config.h  motor_controller.h  sensor.h
src/hal/drivers/: serial_comm.cpp  serial_comm.h
src/llm/: anthropic_provider.cpp  anthropic_provider.h  http_client.cpp  http_client.h  llm_provider.h  openai_provider.cpp  openai_provider.h
src/optimization/: conversation_compressor.cpp  conversation_compressor.h  token_budget.cpp  token_budget.h  token_constants.h  token_optimizer.cpp  token_optimizer.h
src/plugins/: plugin.h  plugin_manager.cpp  plugin_manager.h  plugin_registry.cpp  plugin_registry.h
src/plugins/interfaces/: iembedded_platform.h  isimulation_tool.h  ivision_device.h
src/session/: conversation_node.cpp  conversation_node.h  conversation_tree.cpp  conversation_tree.h  session_manager.cpp  session_manager.h
src/simulation/: sim2real_transfer.cpp  sim2real_transfer.h  simulation_controller.cpp  simulation_controller.h
src/skills/: skill_downloader.cpp  skill_downloader.h  skill_executor.cpp  skill_executor.h  skill_parser.cpp  skill_parser.h  skill_registry.cpp  skill_registry.h
src/skills/robot/: motion_skill.cpp  motion_skill.h  sensor_skill.cpp  sensor_skill.h
src/social/: social_adapter.h  social_manager.cpp  social_manager.h  social_message.h  telegram_adapter.cpp  telegram_adapter.h
src/storage/: config_manager.cpp  config_manager.h
src/tools/: agent_tool.cpp  agent_tool.h  bash_tool.cpp  bash_tool.h  browser_tool.cpp  browser_tool.h  edit_tool.cpp  edit_tool.h  read_tool.cpp  read_tool.h  serial_tool.cpp  serial_tool.h  tool_base.cpp  tool_base.h  write_tool.cpp  write_tool.h
src/utils/: code_quality_constants.h  linux_utils.cpp  logger.cpp  logger.h  macos_utils.cpp  terminal.cpp  terminal.h  thread_pool.cpp  thread_pool.h  windows_utils.cpp
src/vision/: frame_processor.cpp  frame_processor.h  vision_pipeline.cpp  vision_pipeline.h
tests/: CMakeLists.txt  README.md  TEST_SUMMARY.md  quick_test.sh
tests/e2e/: test_full_robotics_development.cpp  test_social_link_flow.cpp
tests/integration/: test_hardware_cli.cpp  test_integration.cpp  test_link_command.cpp  test_social_manager.cpp
tests/plugins/: test_plugin_interface.cpp  test_plugin_manager.cpp  test_plugin_registry.cpp  test_plugin_standalone.cpp  test_plugin_utils.h
tests/unit/: test_agent_bridge.cpp  test_claude_code_bridge.cpp  test_comm_interface.cpp  test_config_manager.cpp  test_hal_exception.cpp  test_hardware_config.cpp  test_language.cpp  test_motion_skill.cpp  test_motor_controller_interface.cpp  test_sensor_interface.cpp  test_sensor_skill.cpp  test_serial_comm.cpp  test_social_message.cpp  test_task_coordinator.cpp  test_telegram_adapter.cpp  test_thread_pool.cpp  test_tools.cpp
tests/vision/: test_vision_pipeline.cpp
